--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -32,7 +32,7 @@ cards:
 
 # Only shown for UK
 
-  - heading: Cases by specimen date, by nation
+  - heading: Cases by specimen date
     cardType: multiAreaStatic
     locationAware:
       included: 
@@ -194,7 +194,7 @@ cards:
 
 # Only shown for UK (identical to non-UK version but needs different abstract)
 
-  - heading: Daily cases by date reported
+  - heading: Cases by date reported
     cardType: chart
     locationAware:
       included:
@@ -347,7 +347,7 @@ cards:
 
 # not shown for UK (has separate radio button card)
 
-  - heading: Daily cases by specimen date
+  - heading: Cases by specimen date
     cardType: chart
     locationAware:
       excluded:
@@ -422,7 +422,7 @@ cards:
 
 # Not shown for UK (has separate date reported card for UK with different abstract) or sub-national (no data)
 
-  - heading: Daily cases by date reported
+  - heading: Cases by date reported
     cardType: chart
     locationAware:
       included:
@@ -570,7 +570,7 @@ cards:
 # not live
 # People tested not currently being published
 
-  - heading: Daily people tested (Dev Only)
+  - heading: People tested (Dev Only)
     cardType: chart
     fullWidth: true
     # Why is this on the Cases page and repeated on the Tested page - just to show cases and tests side by side?  If so maybe card needs different title?
