--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -338,7 +338,7 @@ cards:
 
 # Only shown for UK
 
-  - heading: Deaths within 28 days of positive test by date of death, by nation
+  - heading: Deaths within 28 days of positive test by date of death
     cardType: multiAreaStatic
     locationAware:
       included: 
@@ -495,7 +495,7 @@ cards:
 
 # Only shown for UK
 
-  - heading: Deaths within 28 days of positive test by date reported, by nation
+  - heading: Deaths within 28 days of positive test by date reported
     cardType: multiAreaStatic
     locationAware:
       included: 
@@ -652,7 +652,7 @@ cards:
 
 # not shown for UK
 
-  - heading: Daily deaths within 28 days of positive test by date of death
+  - heading: Deaths within 28 days of positive test by date of death
     cardType: chart
     locationAware:
       excluded:
@@ -727,7 +727,7 @@ cards:
 
 # Not shown for UK or Regions
 
-  - heading: Daily deaths within 28 days of positive test by date reported
+  - heading: Deaths within 28 days of positive test by date reported
     cardType: chart
     locationAware:
       excluded:
@@ -804,7 +804,7 @@ cards:
 # {{ StartDevOnlyBlock}}
 # not shown for UK
 
-  - heading: Daily deaths following a positive test by date of death (Dev Only)
+  - heading: Deaths following a positive test by date of death (Dev Only)
     cardType: chart
     locationAware:
       included:
