--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -19,18 +19,17 @@ headlineNumbers:
 
 # {{ StartDevOnlyBlock }}
 
-  - caption: Tests processed (Dev Only)
+  - caption: PCR Tests processed (Dev Only)
     valueItems:
-      - label: Daily (PCR)
+      - label: Daily
         value: newPCRTestsByPublishDate
         tooltip: Daily number of new PCR tests processed, reported on {date}
       - label: Total
         value: cumPCRTestsByPublishDate
         tooltip: Cumulative total number of PCR tests processed, reported up to {date}
 
-  - caption: Testing capacity (Dev Only)
+  - caption: PCR Testing capacity (Dev Only)
     valueItems:
-      - label: PCR tests
         value: plannedPCRCapacityByPublishDate
         tooltip: Estimated PCR testing capacity reported by laboratories on {date}
 
@@ -38,107 +37,6 @@ headlineNumbers:
 ##############################################################################################################################
 
 cards:
-
-# Only shown for UK
-
-  # - heading: Testing and capacity
-  #   cardType: chart
-  #   locationAware:
-  #     included: 
-  #       areaType:
-  #         - overview
-
-  #   fullWidth: true
-  #   abstract: >
-  #     Number of lab-confirmed positive or negative COVID-19 test results, by date reported.  This is a count of 
-  #     test results and may include multiple tests for an individual person.  It includes all types of testing (PCR 
-  #     swab testing, antibody testing and surveillance testing). Testing capacity is a projection based on reports from 
-  #     labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
-
-  #   download:
-  #     - plannedCapacityByPublishDate
-  #     - capacityPillarOneTwoFour
-  #     - newTestsByPublishDate
-  #     - cumTestsByPublishDate
-
-  #   tabs:
-  #     - heading: Daily
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Tests processed
-  #           value: newTestsByPublishDate
-  #           tooltip: Daily number of tests processed (all pillars) by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
-
-  #         - label: Tests processed (7-day average)
-  #           value: newTestsByPublishDate
-  #           tooltip: 7 day rolling average of the daily number of tests processed (all pillars)
-  #           type: line
-  #           colour: 3
-  #           fill: false
-  #           rollingAverage: true
-
-  #         - label: Testing capacity (all pillars)
-  #           value: plannedCapacityByPublishDate
-  #           tooltip: Estimated daily total capacity reported by laboratories
-  #           type: line
-  #           colour: 6
-  #           fill: true
-  #           rollingAverage: false
-
-  #         - label: Testing capacity (pillars 1, 2 & 4)
-  #           value: capacityPillarOneTwoFour
-  #           tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
-  #           type: line
-  #           colour: 1
-  #           fill: true
-  #           rollingAverage: false
-
-  #     - heading: Cumulative
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Tests processed
-  #           value: cumTestsByPublishDate
-  #           tooltip: Cumulative total number of tests processed (all pillars) by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
-
-  #     - heading: Data
-  #       tabType: table
-  #       fields:
-  #         - label: Date reported
-  #           value: date
-  #           type: date
-  #           tooltip: Date reported on coronavirus.data.gov.uk
-
-  #         - label: Daily tests processed
-  #           value: newTestsByPublishDate
-  #           type: numeric
-  #           tooltip: Daily number of tests processed by date reported
-
-  #         - label: Cumulative tests processed
-  #           value: cumTestsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of tests processed by date reported
-     
-  #         - label: Lab capacity (all pillars)
-  #           value: plannedCapacityByPublishDate
-  #           type: numeric
-  #           tooltip: Estimated daily total capacity reported by laboratories (all pillars)
-
-  #         - label: Lab capacity (pillars 1,2 & 4)
-  #           value: capacityPillarOneTwoFour
-  #           type: numeric
-  #           tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
-
-  #     - heading: About 
-  #       tabType: metadata
-  #       filename: cardMetadata/testing/cardTestingAndCapacity.md
 
 ##############################################################################################################################
 
@@ -165,14 +63,12 @@ cards:
       - capacityPillarTwo
       - capacityPillarThree
       - capacityPillarFour
-#      - capacityPillarOneTwoFour
       - capacityPillarOneTwo
       - newTestsByPublishDate
       - newPillarOneTestsByPublishDate
       - newPillarTwoTestsByPublishDate
       - newPillarThreeTestsByPublishDate
       - newPillarFourTestsByPublishDate
-#      - newPillarOneTwoFourTestsByPublishDate
       - newPillarOneTwoTestsByPublishDate
       - cumTestsByPublishDate
       - cumPillarOneTwoTestsByPublishDate
@@ -181,131 +77,9 @@ cards:
       type: radio
       heading: null
       choices:
-#        - All pillars
-#        - Pillars 1 2 4
         - Pillars 1 2
         - Pillar 3
         - Pillar 4
-    
-    # All pillars:
-      
-    #   tabs:
-    #     - heading: Daily
-    #       tabType: chart
-    #       barType: normal
-    #       fields:
-    #         - label: Tests processed (all pillars)
-    #           value: newTestsByPublishDate
-    #           tooltip: Daily number of tests processed by date reported (all pillars)
-    #           type: bar
-    #           colour: 0
-    #           rollingAverage: false
-
-    #         - label: Tests processed (all pillars, 7-day average)
-    #           value: newTestsByPublishDate
-    #           tooltip: 7 day rolling average of the daily number of tests processed (all pillars)
-    #           type: line
-    #           colour: 3
-    #           fill: false
-    #           rollingAverage: true
-
-    #         - label: Testing capacity (all pillars)
-    #           value: plannedCapacityByPublishDate
-    #           tooltip: Estimated daily capacity reported by laboratories (all pillars)
-    #           type: line
-    #           colour: 6
-    #           fill: true
-    #           rollingAverage: false
-
-    #     - heading: Cumulative
-    #       tabType: chart
-    #       barType: normal
-    #       fields:
-    #         - label: Tests processed (all pillars)
-    #           value: cumTestsByPublishDate
-    #           tooltip: Cumulative number of tests processed (all pillars) by date reported
-    #           type: bar
-    #           colour: 0
-    #           rollingAverage: false
-
-    #     - heading: Data
-    #       tabType: table
-    #       fields:
-    #         - label: Date reported
-    #           value: date
-    #           type: date
-    #           tooltip: Date reported on coronavirus.data.gov.uk
-
-    #         - label: Daily tests processed (all pillars)
-    #           value: newTestsByPublishDate
-    #           type: numeric
-    #           tooltip: Daily number of tests processed by date reported (all pillars)
-
-    #         - label: Cumulative tests processed (all pillars)
-    #           value: cumTestsByPublishDate
-    #           type: numeric
-    #           tooltip: Cumulative number of tests processed by date reported (all pillars)
-
-    #         - label: Lab capacity (all pillars)
-    #           value: plannedCapacityByPublishDate
-    #           type: numeric
-    #           tooltip: Estimated daily capacity reported by laboratories (all pillars)
-
-    #     - heading: About 
-    #       tabType: metadata
-    #       filename: cardMetadata/testing/cardTestingAndCapacity.md
-
-    # Pillars 1 2 4:
-      
-    #   tabs:
-    #     - heading: Daily
-    #       tabType: chart
-    #       barType: normal
-    #       fields:
-    #         - label: Tests processed (pillars 1, 2 & 4)
-    #           value: newPillarOneTwoFourTestsByPublishDate
-    #           tooltip: Daily number of tests processed by date reported (pillars 1,2 & 4)
-    #           type: bar
-    #           colour: 0
-    #           rollingAverage: false
-
-    #         - label: Tests processed (pillars 1, 2 & 4, 7-day average)
-    #           value: newPillarOneTwoFourTestsByPublishDate
-    #           tooltip: 7 day rolling average of the daily number of tests processed (pillars 1, 2 & 4)
-    #           type: line
-    #           colour: 3
-    #           fill: false
-    #           rollingAverage: true
-
-    #         - label: Testing capacity (pillars 1, 2 & 4)
-    #           value: capacityPillarOneTwoFour
-    #           tooltip: Estimated daily capacity reported by laboratories (pillars 1,2 & 4)
-    #           type: line
-    #           colour: 6
-    #           fill: true
-    #           rollingAverage: false
-
-    #     - heading: Data
-    #       tabType: table
-    #       fields:
-    #         - label: Date reported
-    #           value: date
-    #           type: date
-    #           tooltip: Date reported on coronavirus.data.gov.uk
-
-    #         - label: Daily tests processed (pillars 1, 2 & 4)
-    #           value: newPillarOneTwoFourTestsByPublishDate
-    #           type: numeric
-    #           tooltip: Daily number of tests processed by date reported (pillars 1,2 & 4)
-
-    #         - label: Lab capacity (pillars 1, 2 & 4)
-    #           value: capacityPillarOneTwoFour
-    #           type: numeric
-    #           tooltip: Estimated daily capacity reported by laboratories (pillars 1,2 & 4)
-
-    #     - heading: About 
-    #       tabType: metadata
-    #       filename: cardMetadata/testing/cardTestingAndCapacity.md
 
     Pillars 1 2:
       
@@ -478,6 +252,184 @@ cards:
         - heading: About 
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+# Only shown for UK
+
+  - heading: Testing and capacity, by test type
+    cardType: chart
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of lab-confirmed positive or negative COVID-19 test results, by test type, by date reported.  This is a 
+      count of test results and may include multiple tests for an individual person.  PCR swab tests test for the 
+      presence of COVID-19 and include all pillar 1 and 2 tests and, for England, any PCR swab tests undertaken in 
+      pillar 4.  Antibody serology tests test for COVID-19 antobodies and include pillar 3 tests and, in England, 
+      any antibody serology tests undertaken in pillar 4.  Testing capacity is a projection based on reports from 
+      labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
+
+    download:
+      - plannedPCRCapacityByPublishDate
+      - plannedAntibodyCapacityByPublishDate
+      - newPCRTestsByPublishDate
+      - cumPCRTestsByPublishDate
+      - newAntibodyTestsByPublishDate
+      - cumAntibodyTestsByPublishDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - PCR swab
+        - Antibody serology
+
+    PCR swab:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests processed
+              value: newPCRTestsByPublishDate
+              tooltip: Daily number of PCR swab tests processed by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: PCR tests processed (7-day average)
+              value: newPCRTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of PCR swab tests processed
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
+
+            - label: PCR testing capacity
+              value: plannedPCRCapacityByPublishDate
+              tooltip: Estimated daily capacity for PCR swab testing reported by laboratories
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests processed
+              value: cumPCRTestsByPublishDate
+              tooltip: Cumulative number of PCR swab tests processed by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily PCR tests processed
+              value: newPCRTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of PCR swab tests processed by date reported
+
+            - label: Cumulative PCR tests processed
+              value: cumPCRTestsByPublishDate
+              type: numeric
+              tooltip: Cumulative number of PCR swab tests processed by date reported
+
+            - label: Lab capacity for PCR tests
+              value: plannedPCRCapacityByPublishDate
+              type: numeric
+              tooltip: Estimated daily capacity for PCR swab testing reported by laboratories
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+    Antibody serology:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Antibody serology tests processed
+              value: newAntibodyTestsByPublishDate
+              tooltip: Daily number of Antibody serology tests processed by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Antibody tests processed (7-day average)
+              value: newAntibodyTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of Antibody serology tests processed
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
+
+            - label: Antibody testing capacity
+              value: plannedAntibodyCapacityByPublishDate
+              tooltip: Estimated daily capacity for Antibody serology testing reported by laboratories
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Antibody tests processed
+              value: cumAntibodyTestsByPublishDate
+              tooltip: Cumulative number of Antibody serology tests processed by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily Antibody tests processed
+              value: newAntibodyTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of Antibody serology tests processed by date reported
+
+            - label: Cumulative Antibody tests processed
+              value: cumAntibodyTestsByPublishDate
+              type: numeric
+              tooltip: Cumulative number of Antibody serology tests processed by date reported
+
+            - label: Lab capacity for Antibody tests
+              value: plannedAntibodyCapacityByPublishDate
+              type: numeric
+              tooltip: Estimated daily capacity for Antibody testing reported by laboratories
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+# {{ EndDevOnlyBlock }}
 
 ##############################################################################################################################
 
