Testing - typo correction in abstract

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -270,7 +270,7 @@ cards:
       Number of lab-confirmed positive or negative COVID-19 test results, by test type, by date reported.  This is a 
       count of test results and may include multiple tests for an individual person.  PCR swab tests test for the 
       presence of COVID-19 and include all pillar 1 and 2 tests and, for England, any PCR swab tests undertaken in 
-      pillar 4.  Antibody serology tests test for COVID-19 antobodies and include pillar 3 tests and, in England, 
+      pillar 4.  Antibody serology tests test for COVID-19 antibodies and include pillar 3 tests and, in England, 
       any antibody serology tests undertaken in pillar 4.  Testing capacity is a projection based on reports from 
       labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
 
