Fixed error in Testing headline figures for new dev only PCR testing metrics

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -19,19 +19,22 @@ headlineNumbers:
 
 # {{ StartDevOnlyBlock }}
 
-  # - caption: PCR tests processed (Dev Only)
-  #   valueItems:
-  #     - label: Daily
-  #       value: newPCRTestsByPublishDate
-  #       tooltip: Daily number of new PCR tests processed, reported on {date}
-  #     - label: Total
-  #       value: cumPCRTestsByPublishDate
-  #       tooltip: Cumulative total number of PCR tests processed, reported up to {date}
+  - caption: PCR tests processed (Dev Only)
+    valueItems:
 
-  # - caption: PCR testing capacity (Dev Only)
-  #   valueItems:
-  #       value: plannedPCRCapacityByPublishDate
-  #       tooltip: Estimated PCR testing capacity reported by laboratories on {date}
+      - label: Daily
+        value: newPCRTestsByPublishDate
+        tooltip: Daily number of new PCR tests processed, reported on {date}
+
+      - label: Total
+        value: cumPCRTestsByPublishDate
+        tooltip: Cumulative total number of PCR tests processed, reported up to {date}
+
+  - caption: PCR testing capacity (Dev Only)
+    valueItems:
+
+      - value: plannedPCRCapacityByPublishDate
+        tooltip: Estimated PCR testing capacity reported by laboratories on {date}
 
 # {{ EndDevOnlyBlock }}
 ##############################################################################################################################
@@ -366,7 +369,7 @@ cards:
           tabType: chart
           barType: normal
           fields:
-            - label: Antibody serology tests processed
+            - label: Antibody tests processed
               value: newAntibodyTestsByPublishDate
               tooltip: Daily number of antibody serology tests processed by date reported
               type: bar
